force-app/main/default/objects/DRE__DRE_Result__c/DRE__DRE_Result__c.object-meta.xml
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <label>DRE Result</label>
    <nameField>
        <displayFormat>DRERSLT-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRE Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>