force-app/main/default/objects/DRE__DRE_Result__c/fields/DRE__Attribute__c.field-meta.xml
<CustomField>
    <fullName>DRE__Attribute__c</fullName>
    <description>Used to store content (e.g. email)</description>
    <label>Attribute</label>
    <length>80</length>
    <type>Text</type>
</CustomField>