force-app/main/default/objects/DRE__DRE_Result__c/fields/DRE__Check_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>DRE__Check_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Duplicate</label>
    <type>Checkbox</type>
</CustomField>