force-app/main/default/objects/DRE__DRE_Result__c/fields/DRE__DRE_Group__c.field-meta.xml
<CustomField>
    <fullName>DRE__DRE_Group__c</fullName>
    <label>DRE Result Group</label>
    <referenceTo>DRE__DRE_Result_Group__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>DRE_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>