force-app/main/default/objects/DRE__DRE_Result__c/fields/DRE__Field__c.field-meta.xml
<CustomField>
    <fullName>DRE__Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>